// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="profiles__Container-sc-1tsefus-0 gpOpQX"
>
  <h1
    class="profiles__Title-sc-1tsefus-1 EPDDz"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-1tsefus-2 bbBecQ"
  >
    <li
      class="profiles__Item-sc-1tsefus-5 bkYzNa"
    >
      <img
        class="profiles__Picture-sc-1tsefus-4 dvWdGb"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="profiles__Name-sc-1tsefus-3 btevhw"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="profiles__Container-sc-1tsefus-0 gpOpQX"
>
  <h1
    class="profiles__Title-sc-1tsefus-1 EPDDz"
  >
    Who's watching?
  </h1>
  <ul
    class="profiles__List-sc-1tsefus-2 bbBecQ"
  >
    <li
      class="profiles__Item-sc-1tsefus-5 bkYzNa"
    >
      <img
        class="profiles__Picture-sc-1tsefus-4 dvWdGb"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="profiles__Name-sc-1tsefus-3 btevhw"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
